--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,8 @@ body {
     align-items: center;
     flex-direction: column;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .promotion-deal {
@@ -20,7 +22,7 @@ body {
     background-color: #013196;
     align-items: center;
     padding: 12px;
-    padding-left: 5rem;
+    padding-left: 7rem;
     width: 100%;
     grid-template-rows: auto;
     gap: 1rem;
@@ -41,25 +43,77 @@ a {
 
 .search-nav {
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
+    justify-content: center;
     width: 100%;
+    padding: 12px;
+    padding-left:7rem;
+    background-color: #0046be;
+}
+
+.inner-search-nav {
+    display: grid;
+    grid-template-columns: 68px 86px 10fr 7fr 75px;
+    grid-template-rows: 1fr;
+    grid-gap: 48px;
+    width: 100%;
+    position: relative;
+    z-index: inherit;
+    align-items: center;
+    padding-right: 7rem;
 }
 
 .search-nav a img {
     width: auto;
-    height: 60px;
-    padding-left: 5rem;
+    height: 65px;
 }
 
 .menu {
     display: flex;
     justify-content: center;
-    gap: 0px;
+}
+
+.menu img {
+    filter: brightness(0) invert(1);
     width: auto;
-    height: 60px;
-    padding-left: 0px;
-    flex: 1;
-    margin-left: auto;
+    height: 40px;
+}
+
+.menu button {
+    align-items: center;
+    color: white;
+    background-color: #0046be;
+    display: flex;
+    border: unset;
+    padding: unset;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.search-bar {
+    width: 28rem;
+    height: 50%;
+}
+
+.location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.location img {
+    width: auto;
+    height: 40px;
+    filter: brightness(0) invert(1);
+}
+
+.location button {
+    align-items: ceter;
+    color: white;
+    display: flex;
+    border: unset;
+    padding: unset;
+    background-color: #0046be;
+    font-size: 22px;
+    font-weight: 700;
 }
